--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.8.2",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
